Initial positional de Bruijn graph contig caller; needs additional test coverage